include/library/private/libbwc.h

  /************************************************************************************************\
  ||            ___  _  _ ___  _    _ ____    ____ _  _ _  _ ____ ___ _ ____ _  _ ____            ||
  ||            |__] |  | |__] |    | |       |___ |  | |\ | |     |  | |  | |\ | [__             ||
  ||            |    |__| |__] |___ | |___    |    |__| | \| |___  |  | |__| | \| ___]            ||
  ||                                                                                              ||
  \************************************************************************************************/
  //==========|==========================|======================|======|=======|====================
  bwc_stream*  bwc_init_stream            (void                         *const  inpbuf,
                                           void                         *const  outbuf,
                                           bwc_mode              const          mode);
  //==========|==========================|======================|======|=======|====================
  bwc_codec*   bwc_alloc_coder            (uint64                const          nX,
                                           uint64                const          nY,
                                           uint64                const          nZ,
                                           uint64                const          nTS,
                                           uint8                 const          nPar,
                                           bwc_precision         const          prec);
  //==========|==========================|======================|======|=======|====================
  bwc_codec*   bwc_alloc_decoder          ();
  //==========|==========================|======================|======|=======|====================
  void         bwc_free_codec             (bwc_codec                    *const  codec);
  //==========|==========================|======================|======|=======|====================
  void         bwc_set_error_resilience   (bwc_codec                    *const  codec);
  //==========|==========================|======================|======|=======|====================
  void         bwc_set_decomp             (bwc_codec                    *const  codec,
                                           uint8                 const          decompX,
                                           uint8                 const          decompY,
                                           uint8                 const          decompZ,
                                           uint8                 const          decompTS);
  //==========|==========================|======================|======|=======|====================
  void         bwc_set_precincts          (bwc_codec                    *const  codec,
                                           uint8                 const          pX,
                                           uint8                 const          pY,
                                           uint8                 const          pZ,
                                           uint8                 const          pTS);
  //==========|==========================|======================|======|=======|====================
  void         bwc_set_codeblocks         (bwc_codec                    *const  codec,
                                           uint8                 const          cbX,
                                           uint8                 const          cbY,
                                           uint8                 const          cbZ,
                                           uint8                 const          cbTS);
  //==========|==========================|======================|======|=======|====================
  void         bwc_set_qm                 (bwc_codec                    *const  codec,
                                           uint8                 const          Qm);
  //==========|==========================|======================|======|=======|====================
  void         bwc_set_tiles              (bwc_codec                    *const  codec, 
                                           uint64                const          tilesX,
                                           uint64                const          tilesY,
                                           uint64                const          tilesZ,
                                           uint64                const          tilesTS,
                                           bwc_tile_instr        const          instr);
  //==========|==========================|======================|======|=======|====================
  uchar        bwc_create_compression     (bwc_codec                    *const  codec,
                                           bwc_stream                   *const  data,
                                           char                         *const  rate_control);
  //==========|==========================|======================|======|=======|====================
  size_t       bwc_compress               (bwc_codec                    *const  codec,
                                           bwc_stream                   *const  data);
  //==========|==========================|======================|======|=======|====================
  uchar        bwc_create_decompression   (bwc_codec                    *const  codec,
                                           bwc_stream                   *const  stream,
                                           uint8                 const          layer);
  //==========|==========================|======================|======|=======|====================
  uchar        bwc_decompress             (bwc_codec                    *const  codec,
                                           bwc_stream                   *const  stream);