src/interfaces/fortran/bwc.F90


  !************************************************************************************************!
  !|            ___  _  _ ___  _    _ ____    ____ _  _ _  _ ____ ___ _ ____ _  _ ____            |!
  !|            |__] |  | |__] |    | |       |___ |  | |\ | |     |  | |  | |\ | [__             |!
  !|            |    |__| |__] |___ | |___    |    |__| | \| |___  |  | |__| | \| ___]            |!
  !|                                                                                              |!
  !************************************************************************************************!
  interface
    function init_stream_f(inpbuf, outbuf, mode) result(stream) &
             bind(c, name="bwc_init_stream")
      import
      type(c_ptr)                           ::  stream
      type(c_ptr),                  value   ::  inpbuf
      type(c_ptr),                  value   ::  outbuf
      integer(kind=c_int),          value   ::  mode
    end function init_stream_f
    !*============================================================================================*!
    function alloc_coder_f(nx, ny, nz, nts, npar, prec) result(codec) &
             bind(c, name="bwc_alloc_coder")
      import
      type(c_ptr)                           ::  codec
      integer(kind=c_int64_t),      value   ::  nx, ny, nz, nts
      integer(kind=c_int8_t),       value   ::  npar
      integer(kind=c_int),          value   ::  prec
    end function alloc_coder_f
    !*============================================================================================*!
    function alloc_decoder_f() result(codec) &
             bind(c, name="bwc_alloc_decoder")
      import
      type(c_ptr)                           ::  codec
    end function alloc_decoder_f
    !*============================================================================================*!
    subroutine free_codec_f(codec) &
               bind(c, name="bwc_free_codec")
      import
      type(c_ptr),                  value   ::  codec
    end subroutine free_codec_f
    !*============================================================================================*!
    subroutine set_error_resilience_f(codec) &
               bind(c, name="bwc_set_error_resilience")
      import
      type(c_ptr),                  value   ::  codec
    end subroutine set_error_resilience_f
    !*============================================================================================*!
    subroutine set_decomp_f(codec, decompx, decompy, decompz, decompts) &
               bind(c, name="bwc_set_decomp")
      import
      type(c_ptr),                  value   ::  codec
      integer(kind=c_int8_t),       value   ::  decompx, decompy
      integer(kind=c_int8_t),       value   ::  decompz, decompts
    end subroutine set_decomp_f
    !*============================================================================================*!
    subroutine set_precincts_f(codec, px, py, pz, pts) &
               bind(c, name="bwc_set_precincts")
      import
      type(c_ptr),                  value   ::  codec
      integer(kind=c_int8_t),       value   ::  px, py
      integer(kind=c_int8_t),       value   ::  pz, pts
    end subroutine set_precincts_f
    !*============================================================================================*!
    subroutine set_codeblocks_f(codec, cbx, cby, cbz, cbts) &
               bind(c, name="bwc_set_codeblocks")
      import
      type(c_ptr),                  value   ::  codec
      integer(kind=c_int8_t),       value   ::  cbx, cby
      integer(kind=c_int8_t),       value   ::  cbz, cbts
    end subroutine set_codeblocks_f
    !*============================================================================================*!
    subroutine set_qm_f(codec, qm) &
               bind(c, name="bwc_set_qm")
      import
      type(c_ptr),                  value   ::  codec
      integer(kind=c_int8_t),       value   ::  qm
    end subroutine set_qm_f
    !*============================================================================================*!
    subroutine set_tiles_f(codec, tilesx, tilesy, tilesz, tilests, instr) &
               bind(c, name="bwc_set_tiles")
      import
      type(c_ptr),                  value   ::  codec
      integer(kind=c_int64_t),      value   ::  tilesx, tilesy, tilesz, tilests
      integer(kind=c_int),          value   ::  instr
    end subroutine set_tiles_f
    !*============================================================================================*!
    function create_compression_f(codec, stream, rate_control) result(error_flag) &
             bind(c, name="bwc_create_compression")
      import
      integer(kind=c_int8_t)                ::  error_flag
      type(c_ptr),                  value   ::  codec
      type(c_ptr),                  value   ::  stream
      character(kind=c_char)                ::  rate_control(*)
    end function create_compression_f
    !*============================================================================================*!
    function compress_f(codec, stream) result(error_flag) &
             bind(c, name="bwc_compress")
      import
      integer(kind=c_int8_t)                ::  error_flag
      type(c_ptr),                  value   ::  codec
      type(c_ptr),                  value   ::  stream
    end function compress_f
    !*============================================================================================*!
    function create_decompression_f(codec, stream, layer) result(error_flag) &
             bind(c, name="bwc_create_decompression")
      import
      integer(kind=c_int8_t)                ::  error_flag
      type(c_ptr),                  value   ::  codec
      type(c_ptr),                  value   ::  stream
      integer(kind=c_int8_t),       value   ::  layer
    end function create_decompression_f
    !*============================================================================================*!
    function decompress_f(codec, stream) result(error_flag) &
             bind(c, name="bwc_decompress")
      import
      integer(kind=c_int8_t)                ::  error_flag
      type(c_ptr),                  value   ::  codec
      type(c_ptr),                  value   ::  stream
    end function decompress_f
  end interface

  !************************************************************************************************!
  !|                           _ _  _ ___ ____ ____ ____ ____ ____ ____                           |!
  !|                           | |\ |  |  |___ |__/ |___ |__| |    |___                           |!
  !|                           | | \|  |  |___ |  \ |    |  | |___ |___                           |!
  !|                                                                                              |!
  !************************************************************************************************!
  public  ::  bwc_dwt_9_7,                      &
              bwc_dwt_5_3,                      &
              bwc_dwt_haar

  public ::   bwc_prog_LRCP
  
  public ::   bwc_qt_none,                      &
              bwc_qt_derived
  
  public ::   bwc_tile_sizeof,                  &
              bwc_tile_numbof 

  public ::   bwc_init_stream,                  &
              bwc_alloc_coder,                  &
              bwc_alloc_decoder,                &
              bwc_free_codec

  public ::   bwc_set_error_resilience,         &
              bwc_set_decomp,                   &
              bwc_set_precincts,                &
              bwc_set_codeblocks,               &
              bwc_set_qm,                       &
              bwc_set_tiles

  public ::   bwc_create_compression,           &
              bwc_compress,                     &
              bwc_create_decompression,         &
              bwc_decompress
end module bwc